♻️ refactor: update Client entity and related logic.