@@ -2,11 +2,13 @@ package com.digitalbankapi.application.service.impl;
 
 import com.digitalbankapi.application.contracts.dto.request.ClientRequestDTO;
 import com.digitalbankapi.application.contracts.dto.response.ClientResponseDTO;
+import com.digitalbankapi.application.mappers.ClientMapper;
 import com.digitalbankapi.application.service.ClientService;
 import com.digitalbankapi.domain.entities.Client;
-import com.digitalbankapi.domain.exceptions.InvalidAgeException;
+import com.digitalbankapi.domain.exceptions.InvalidClientException;
 import com.digitalbankapi.domain.factories.ClientFactory;
 import com.digitalbankapi.domain.validation.AgeValidator;
+import com.digitalbankapi.domain.validation.ClientValidator;
 import com.digitalbankapi.repository.ClientRepository;
 import jakarta.transaction.Transactional;
 import org.slf4j.Logger;
@@ -14,9 +16,9 @@ import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static com.digitalbankapi.domain.shared.constants.ErrorMessages.CLIENT_NOT_FOUND;
 
 @Service
 public class ClientServiceImpl implements ClientService {
@@ -29,46 +31,45 @@ public class ClientServiceImpl implements ClientService {
     private ClientFactory clientFactory;
     @Autowired
     private AgeValidator ageValidator;
+    @Autowired
+    private ClientValidator clientValidator;
+    @Autowired
+    private ClientMapper clientMapper;
 
     @Override
     @Transactional
-    public ClientResponseDTO createClient(ClientRequestDTO clientDTO) throws InvalidAgeException {
-        if (!ageValidator.isAdult(clientDTO.dateOfBirth())) {
-            log.warn("Cliente não é maior de idade: {}", clientDTO.dateOfBirth());
-            throw new InvalidAgeException("Cliente deve ser maior de 18 anos para criar uma conta.");
-        }
+    public ClientResponseDTO createClient(ClientRequestDTO clientDTO) throws InvalidClientException {
+        clientValidator.validate(clientDTO);
 
         Client client = clientFactory.createClient(clientDTO);
         Client savedClient = clientRepository.save(client);
 
         log.info("Cliente criado com sucesso: {}", savedClient);
-        return mapToResponseDTO(savedClient);
+        return clientMapper.toResponseDTO(savedClient);
     }
 
     @Override
     public List<ClientResponseDTO> getAllClients() {
-        List<Client> clients = clientRepository.findAll();
-        return clients.stream().map(this::mapToResponseDTO).collect(Collectors.toList());
+        return clientRepository.findAll()
+                .stream()
+                .map(clientMapper::toResponseDTO)
+                .toList();
     }
 
     @Override
     public ClientResponseDTO getClientById(Long id) {
         Client client = clientRepository.findById(id).orElseThrow(()
-                -> new IllegalArgumentException("Cliente com ID " + id + " não encontrado"));
-        return mapToResponseDTO(client);
+                -> new IllegalArgumentException(CLIENT_NOT_FOUND));
+        return clientMapper.toResponseDTO(client);
     }
 
     @Override
     @Transactional
     public void deleteClient(Long id) {
         if (!clientRepository.existsById(id)) {
-            throw new IllegalArgumentException("Cliente com ID " + id + " não encontrado");
+            throw new IllegalArgumentException(CLIENT_NOT_FOUND);
         }
         clientRepository.deleteById(id);
         log.info("Cliente com ID {} excluído com sucesso", id);
-    }
-
-    private ClientResponseDTO mapToResponseDTO(Client client) {
-        return new ClientResponseDTO(client.getId(), client.getName());
     }
 }
